--- a/public/style.css
+++ b/public/style.css
@@ -5,13 +5,19 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #181818;
     color: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
 
 .main-container {
     display: flex;
     flex-direction: column;
     max-width: 800px;
-    margin: 50px auto;
+    width: 100%;
+    margin: 0 auto;
+    margin-bottom: 100px;
     padding: 20px;
     background-color: #242424;
     border-radius: 12px;
